# qdoc2md

./: LICENSE  README.md  main.py  pyproject.toml
resources/: sample.q
resources/docs/: sample.md
src/qdoc2md/: document.py  generator.py  main.py  model.py  param.py  parser.py  section.py
tests/: test_parser.py
tests/resources/: test.md  test.q
