[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdoc2md"
version = "0.0.1"
authors = [
  { name="Darren Sun", email="darren@darrensun.pro" },
]
description = "Converting q documentation to markdown documents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/darrenwsun/qdoc2md"
Issues = "https://github.com/darrenwsun/qdoc2md/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
